#pragma once

namespace ConnixCore {
namespace Communication {

enum class TransportStatus {
    IDLE,
    SENDING,
    RECEIVING
};

} // namespace Communication
} // namespace ConnixCore
