#pragma once

namespace ConnixCore {
namespace Communication {

enum class TransportType {
    TCP,
    UDP,
    UDS
};

} // namespace Communication
} // namespace ConnixCore
